# smartcalc

./: Cargo.toml  README.md  config.toml
src/: command.rs  config.rs  custom_io.rs  default_commands.rs  invalid_expression.rs  main.rs  parameter_documentation.rs  parse_error.rs  parser.rs  variable.rs  variables.rs  windows.rs
