[package]
name = "smartcalc"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.29.0"
evalexpr = "12.0.2"
inline_colorization = "0.1.6"
lazy_static = "1.5.0"
linked-hash-map = "0.5.6"
radix_fmt = "1.0.0"
regex = "1.10.6"
regex-split = "0.1.0"
serde = "1.0.210"
serde_derive = "1.0.210"
toml = "0.8.19"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.1", features = ["Win32_System_Console"] }

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true
